=================================


This file contain the news about the tool


=================
  RELEASE NOTES
=================

-------------
 ardesia 0.6
-------------

Internationalization:
- Add french translation

Usability:
- New text insertion tool to improve the usability;
  implemented a new text insertion cursor, 
  when you click on the page a new cursor blinks on
  the text focus

Features:
- Ardesia stay above all windows; you can open a program
  in fullscreen and annotate on it 
- When a fault occurs it logs the backtrace in tour TMP folder
- Email support
- Pdf email sender; when you quit the program if you have made 
  a pdf Ardesia opens your defaul mailer with a new stub mail 
  and it attachs your artifact
- Bug Tracking: If the program is able to found a misbehaviour 
  it open an email stub with the log to be sended 
  to the ardesia developers staff
- Florence virtual keyboard integration: if you have it
  installed, will be show/hide when you select the text 
  tool (linux only)


-------------
 ardesia 0.5
-------------

Dependencies:
- gtk 2.16.6 included inside 
  the windows package

Usability:
- performance improvement
- faster pdf export
- enhancement in the pressure support

Features:
- Ardesia now works with Kwin and xcompmgr 
  composite managers also 
- Better shape recognition with the roundifier tool;
  now a new bezier alghorithm and ellipse detection 
  has been implemented
- low memory usage; the save point are stored on files
- add system that print the backtrace in the case that
  a segmentation fault occurs (linux only)

Bug Fix:
- fix the sound recording on Linux using pulse audio
- fix a bug that caused the conjunction of the new drawn point 
  with the last point belong to the old line; 
  this problem occurred only using the xtest virtaul device
  (this is used by the python-whiteboard wiimote driver also) 
- fix the opening image file as ardesia background right clicking 