@@ -42,10 +42,13 @@
 
 
 #define TEXT_CURSOR_WIDTH 4
-#define VIRTUALKEYBOARD_NAME "florence"
 
+#ifdef _linux
+#define VIRTUALKEYBOARD_NAME "florence"
+#endif
 
 #ifdef _WIN32
+#define VIRTUALKEYBOARD_NAME "C:\\Program Files\\Common Files\\Microsoft Shared\\ink\\TabTip.exe"
   
 #define TEXT_UI_FILE "..\\share\\ardesia\\ui\\text.glade"
 #define TEXT_MOUSE_EVENTS        ( GDK_POINTER_MOTION_MASK |    \
