@@ -55,6 +55,7 @@ GdkCursor* fixed_gdk_cursor_new_from_pixmap(GdkPixmap *source, GdkPixmap *mask,
 /* Override the with the gdk_cursor_new_from_pixmap with the fixed version */						
 #define gdk_cursor_new_from_pixmap fixed_gdk_cursor_new_from_pixmap
 
+/* Send an email with MAPI*/
 void windows_send_email(gchar* to, gchar* subject, gchar* body, gchar* attachment);
 
 #endif
